--- a/My Project/大麦/大麦项目笔记——业务功能.md
+++ b/My Project/大麦/大麦项目笔记——业务功能.md
@@ -399,5 +399,515 @@ public void doExist(String mobile){
 }
 ```
 
+#### 3. 用户登录、退出
+
+登录：主要就是通过userMobile或者email进行检查，然后通过userMobile/email查询userId，再通过userId查询userInfo。期间还进行了非空检查，1分钟内的错误次数检查。最后返回loginUserVo，包含token等信息，后续请求带着token就可以解析出userId，进而从redis中拿到userInfo
+
+退出：根据传入的Dto判断user是不是真的存在，如果存在的话，从redis中删除对应code（平台code）的userInfo
+
+#### 4. 用户信息脱敏展示
+
+一共是一下四种方案：
+
+1. 自定义注解，在需要用到的字段上加上注解
+2. AOP，对返回进行处理，比如加上@AfterReturning进行拦截返回值，进行特殊处理
+3. 自定义序列化器，自定义一个Jaskson序列化器，然后注册
+4. 使用Hibernate Validtor
+
+各自缺点：
+
+1. **自定义注解和AOP**对于脱敏而言，都比较笨重，且依赖于Spring环境，还要考虑到抽取组件
+2. **自定义序列号**，得考虑到项目中json序列化有没有定制，jackson有没有替换掉
+3. **Hibernate Validtor**，使用场景有限，不是所有实体都要Hibernate Validtor
+
+实现的方案：
+
+我们的实体VO使用了@Data注解，不需要手动写getter/setter方法，json的转化都需要getter/setter方法，因此可以考虑改造getter方法，可以使用自定义getter方法+hutool工具类实现
+
+```java
+@Data
+@ApiModel(value="TicketUserVo", description ="购票人数据")
+public class TicketUserVo implements Serializable {
+
+    private static final long serialVersionUID = 1L;
+    
+    @ApiModelProperty(name ="relName", dataType ="String", value ="用户真实名字")
+    private String relName;
+    
+    public String getRelName() {
+        if (StringUtil.isNotEmpty(relName)) {
+            // 这里使用 hutool 的 hide 方法
+            return StrUtil.hide(relName, 0, 1);
+        }
+        return relName;
+    }
+}
+
+/**
+ * 替换指定字符串的指定区间内字符为"*"
+ * 俗称：脱敏功能，后面其他功能，可以见：DesensitizedUtil(脱敏工具类)
+ *
+ * 
+<pre>
+ * CharSequenceUtil.hide(null,*,*)=null
+ * CharSequenceUtil.hide("",0,*)=""
+ * CharSequenceUtil.hide("jackduan@163.com",-1,4)   ****duan@163.com
+ * CharSequenceUtil.hide("jackduan@163.com",2,3)    ja*kduan@163.com
+ * CharSequenceUtil.hide("jackduan@163.com",3,2)    jackduan@163.com
+ * CharSequenceUtil.hide("jackduan@163.com",16,16)  jackduan@163.com
+ * CharSequenceUtil.hide("jackduan@163.com",16,17)  jackduan@163.com
+ * </pre>
+ *
+ * @param str          字符串
+ * @param startInclude 开始位置（包含）
+ * @param endExclude   结束位置（不包含）
+ * @return 替换后的字符串
+ * @since 4.1.14
+ */
+public static String hide(CharSequence str, int startInclude, int endExclude) {
+    return replace(str, startInclude, endExclude, '*');
+}
+```
+
+#### 5. 用户信息脱敏存储
+
+主要是通过配置ShadingSphere进行加密，配置需要加密的数据库表和列，以及加密算法，即可在存储的时候自动加密，同时使用对称加密算法，使得取出数据的时候也可以自动进行解密
+
+### 节目服务
+
+#### 1. 初始化数据
+
+![image-20250113140753763](.\images\image-20250113140753763-1736842212431-10.png)
+
+本过程应该是由运营人员考虑，为了学习，我们在项目初始化的时候加载数据，以供使用。
+
+我们自定义了四种init组件，在节目服务的初始化中用到的是PostContruct组件进行初始化，比如ProgramElasticsearchInitData，此外，初始化有异步和同步两种方式，对于向ES加载数据、获取节目分类，我们采用异步线程进行，防止拖慢项目启动速度。像更新节目时间，缓存布隆过滤器中的节目数据，我们采用的是同步的做法
+
+```java
+// ProgramElasticsearchInitData
+
+@Override
+    public void executeInit(final ConfigurableApplicationContext context) {
+        BusinessThreadPool.execute(() -> {
+            try {
+                initElasticsearchData();
+            }catch (Exception e) {
+                log.error("executeInit error",e);
+            }
+        });
+    }
+```
+
+#### 2. 加载主页数据
+
+主页样式：
+
+![image-20250113151116181](.\images\image-20250113151116181-1736842224308-12.png)
+
+主页样式主要是通过parentProgramCategoryIds进行查询的（主页都是大的分类），所以如果想直接在数据库中查询会引发全路由（除非是建立附属表）。
+
+但是本项目除了可以在数据库中查，为了检索方便，引入了ElasticSearch，在初始化数据的时候已经把数据放到ES中了，因此这里可以直接查ES拿到主页的节目数据，然后再用数据库兜底（全路由）
+
+通过ES查询的思路：
+
+1. 对父节目循环查询子节目
+2. 拼接地区条件、父节目类型条件
+3. 查询前7条节目数据
+4. 拼接节目数据到Vo中
+
+#### 3. 分页查询节目数据
+
+分页查询页面：
+
+![image-20250113154411248](.\images\image-20250113154411248.png)
+
+分页查询节目数据Dto传参较多，会引起全路由，因此分页查询节目数据也是采用ES进行数据查询+数据库兜底的策略，通过设置城市、父类型、子类型、时间、排序顺序来进行ES查询
+
+#### 4. 查看节目详情
+
+![节目详情](.\images\节目详情.jpg)
+
+查看节目详情需要从多个表中查询，最后组装成Vo。
+
+##### 1. detail版本
+
+此版本API就是正常执行从redis中获取，查不到的话就查数据库，然后把数据写回redis
+
+**问题：**
+
+如果缓存中没有数据，那所有的请求都要打到数据库上，存在着缓存击穿的问题。因此后续更新API以优化缓存击穿问题。因此需要对逻辑进行优化。
+
+##### 2. detailV1版本
+
+**lock()版本：**
+
+模仿解决单例模式的懒惰初始化的解决安全问题的方式，在尝试查数据库的时候进行加锁，获取锁成功之后再次尝试从redis获取数据，这种方式使得只有第一个获取到锁的线程会去查数据库，后续的线程都是从redis中查到数据。
+
+**问题：**
+
+虽然后续的请求不需要再查数据库了，但是还是要执行**加锁-查redis-解锁**的逻辑，如果并发量高的话，就会很耗时，因此需要降低获取锁的竞争程度。
+
+**tryLock()版本：**
+
+**解决：**
+
+把lock()改成是tryLock()，等待时间是1s，也就是后续请求如果超过1s获取不到锁，就不再获取了，此时第一个线程已经把数据写到redis了，直接查redis就能拿到。
+
+**思考：**
+
+如果第一个线程的运行时间超过了1s，那么后续的请求都会打到数据库，也会造成击穿，因此为了高可用可以测试最低阈值，在阻塞业务时间和高可用性之间做平衡。
+
+##### 3. detailV2版本
+
+**思考：**
+
+所有的请求都由redis处理，怎么保证**redis的可用性**呢？
+
+**redis集群的局限性：**
+
+redis集群虽然可以保证高可用，但是针对的场景是**请求多个不同对象**，比如100万个并发请求，查询100个节目，此时使用集群确实可以缓解压力。
+
+但是我们现在的业务是高并发查看同一个节目的详细信息。因为请求还是会打到同一个节点。
+
+**本地缓存：**
+
+**优势：**
+
++ 本地缓存的**速度**是redis的几十倍以上
++ 使用本地缓存没有**网络消耗**
+
+**思考：**
+
+1. 如何**设计**本地缓存？
+2. 如何进行多级缓存的**管理**？
+3. 怎么保证多级缓存的**一致性**？
+4. 本地缓存怎么考虑过期时间防止**内存溢出**？
+
+**选型：**
+
+考虑本地缓存，使用的结构应该是Map
+
++ HashMap线程不安全，排除。
++ ConcurrentHashMap，线程安全，但是必须显示移除历史缓存
++ **Caffeine线程安全，并可以通过配置自动移除不常用数据**
+
+综上，选择Caffeine作为本地缓存
+
+**实现：**
+
+优先从本地缓存中获取，如果获取不到就到redis中查询
+
+```java
+// 查询多级缓存方法
+public ProgramShowTime selectProgramShowTimeByProgramIdMultipleCache(Long programId){
+    return localCacheProgramShowTime.getCache(RedisKeyBuild.createRedisKey
+            (RedisKeyManage.PROGRAM_SHOW_TIME, programId).getRelKey(),
+            key -> selectProgramShowTimeByProgramId(programId));
+}
+// getCache方法
+public ProgramShowTime getCache(String id, Function<String, ProgramShowTime> function){
+        return localCache.get(id,function);
+}
+```
+
+自定义本地缓存：
+
+```java
+@Component
+public class LocalCacheTicketCategory {
+    
+    /**
+     * 本地缓存
+     * */
+    private Cache<Long, List<TicketCategoryVo>> localCache;
+    
+    /**
+     * 本地缓存的容量
+     * */
+    @Value("${maximumSize:10000}")
+    private Long maximumSize;
+    
+    @Autowired
+    private RedisCache redisCache;
+    
+    @PostConstruct
+    public void localLockCacheInit(){
+        localCache = Caffeine.newBuilder()
+                .maximumSize(maximumSize)
+                .expireAfter(new Expiry<Long, List<TicketCategoryVo>>() {
+                    @Override
+                    public long expireAfterCreate(@NonNull final Long key, 
+                                                  @NonNull final List<TicketCategoryVo> value,
+                                                  final long currentTime) {
+                        Long expire = redisCache.getExpire(RedisKeyBuild.createRedisKey
+                                (RedisKeyManage.PROGRAM_TICKET_CATEGORY_LIST, key),TimeUnit.MILLISECONDS);
+                        return TimeUnit.MILLISECONDS.toNanos(expire);
+                    }
+                    
+                    @Override
+                    public long expireAfterUpdate(@NonNull final Long key, 
+                                                  @NonNull final List<TicketCategoryVo> value,
+                                                  final long currentTime, 
+                                                  @NonNegative final long currentDuration) {
+                        return currentDuration;
+                    }
+                    
+                    @Override
+                    public long expireAfterRead(@NonNull final Long key, 
+                                                @NonNull final List<TicketCategoryVo> value,
+                                                final long currentTime, 
+                                                @NonNegative final long currentDuration) {
+                        return currentDuration;
+                    }
+                })
+                .build();
+    }
+    
+    /**
+     * Caffeine的get是线程安全的
+     * */
+    public List<TicketCategoryVo> getCache(Long id, 
+                                           Function<Long, List<TicketCategoryVo>> function){
+        return localCache.get(id,function);
+    }
+    
+    public void del(Long id){
+        localCache.invalidate(id);
+    }
+}
+```
+
+部分数据过期时间不能直接拿到，就从redis获取，比如票档数据没有节目演出时间，这时候可以从redis中查这个过期时间
+
+**多级缓存的一致性：**
+
+对于一致性，通用的方案就是**修改数据库之后删除缓存**。
+
+**但是本地缓存在每个实例上都进行了存储，要怎么去更新呢？**
+
+**解决方案：**
+
+1. 定时任务查询：定时从库中扫描失效的数据，对于已经失效的数据就在缓存中删除。频率不要确定，高了影响性能，低了清除不掉，且对于多个实例而言，这样的性能损耗比较大
+2. 使用消息中间件：考虑其实没必要为了一个请求本地缓存的业务去实现MQ，能不能简化使用消息通知
+3. Redis的PUB/SUB：致命问题是没法进行持久化，如果出现异常消息会丢失
+4. Redis的Stream：是Redis对消息队列的完善，可以考虑使用Stream
+
+考虑使用Stream，原因如下：
+
+1. 相比MQ而言更加轻量级，清除缓存的操作不需要MQ这种专门解决高并发问题的中间件
+2. 每个实例都连接了Redis，通信方便，不需要引入额外的中间件
+3. 可以进行数据持久化
+
+**实现：**
+
+通过封装的API进行stream广播，使得每一个实例消费即可
+
+#### 5. 用户选座
+
+存储结构：
+
+![image-20250114145157163](.\images\image-20250114145157163.png)
+
+采用的是hash结构，方便后续下单和取消订单的时候进行座位状态变更
+
+选座是在节目详细页面的，因此入参只有programId
+
+查询流程：
+
+1. 要先根据programId查到节目的详细信息
+
+2. 根据programId查询演出时间
+3. 根据演出时间和节目id查询节目票档
+4. 根据票档和节目id查询座位信息
+5. 按照节目价格进行分组（用户选择价格，前端需要给对应价格的座位高亮显示）
+6. 填充数据，返回vo
+
+#### 6. 用户下单
+
+##### 用户下单流程图
+
+![购票流程V1](images/大麦项目笔记——业务功能/购票流程V1.png)
+
+##### 下单前置校验
+
+通过组合容器进行构建下单校验逻辑
+
+![用户购票验证逻辑流程图 (1)](images/大麦项目笔记——业务功能/用户购票验证逻辑流程图 (1).png)
+
+在购票前进行三次校验,分别是参数校验，每笔订单最多购票数量校验和每个用户最多购票数量校验
+
+##### 购票流程V1
+
+1. 加锁
+
+   ```java
+   @RepeatExecuteLimit(
+               name = RepeatExecuteLimitConstants.CREATE_PROGRAM_ORDER,
+               keys = {"#programOrderCreateDto.userId","#programOrderCreateDto.programId"})
+       @ServiceLock(name = PROGRAM_ORDER_CREATE_V1,keys = {"#programOrderCreateDto.programId"})
+       @Override
+       public String createOrder(final ProgramOrderCreateDto programOrderCreateDto) {
+           // 组合模式进行校验
+           compositeContainer.execute(CompositeCheckType.PROGRAM_ORDER_CREATE_CHECK.getValue(),programOrderCreateDto);
+           // 传播订单
+           return programOrderService.create(programOrderCreateDto);
+       }
+   ```
+
+   首先使用PROGRAM_ORDER_CREATE_V1加锁，保证数据一致性
+
+2. 幂等操作
+
+   @RepeatExecuteLimit即对业务进行幂等速率限制，分布式锁的作用是防止不同的用户同时对参数进行修改，而幂等操作是防止同一个用户短时间内操作多次业务
+
+3. 分布式锁
+
+   @ServiceLock指定锁的种类，然后尝试获取分布式锁，保证同一时间内只有一个用户下单
+
+4. 前置校验
+
+   通过组合校验模式进行前置校验，校验通过才继续执行
+
+5. 执行业务逻辑
+
+   1. 获取节目演出时间
+
+      直接从缓存中获取即可
+
+   2. 获取节目票档类型
+
+      主要是从传入参数中获取座位的票档id/票档id，和真正的票档id进行比较，然后返回票档类型的vo集合。
+
+      这里返回集合的原因是方式手动选座选了多张不同票档的座位
+
+      <img src="images/image-20250115145115745.png" alt="image-20250115145115745" style="zoom: 150%;" />
+
+   3. 构建参数，再次进行参数校验
+
+      构建要扣减的座位
+
+      + 手动选座
+
+        校验每个票档的余票数量，构建订单参数，校验总价格
+
+      + 自动选座
+
+        自动选座一笔订单只能选一种座位，因此只进行余票数量校验，并通过算法检索座位和构建要购买的座位Dto
+
+   4. 更新缓存数据
+
+      通过传入订单状态（未支付，已取消）来选择扣减/增加座位余数，进行状态迁移，把座位从未锁定->锁定/锁定->未锁定，通过lua脚本执行，保证原子性
+
+   5. 创建订单
+
+      1. 构建订单参数
+
+         构建主订单参数和购票人订单参数
+
+      2. 通过RPC创建订单
+
+      3. 加入订单到延迟队列，超时则取消
+
+##### 购票流程V2
+
+**不同版本之间主要是加锁流程的区别，业务流程一样**
+
+问题：
+
+V1版本的问题：V1的加锁粒度是programId，这样就会导致缓存分片(programId+catagoryId)失效，因此需要进行锁粒度的细化，变成和分片一样的粒度
+
+Redis压力问题：V1版本中是直接到Redis中去获取分布式锁，这样一瞬间所有请求都会打到Redis，会造成Redis压力过大。
+
+V2使用本地缓存Caffeine进行本地锁，只有获取到本地锁的请求才能到Redis中获取锁。
+
+本地锁+分布式锁流程示意：
+
+![本地锁+分布式锁公平性.png](images/1723690824820-4361ae1c-6f08-4e5f-a975-119afe7b3e84.webp)
+
+
+
+加锁流程：
+
+```java
+@RepeatExecuteLimit(
+            name = RepeatExecuteLimitConstants.CREATE_PROGRAM_ORDER,
+            keys = {"#programOrderCreateDto.userId","#programOrderCreateDto.programId"})
+    @Override
+    public String createOrder(ProgramOrderCreateDto programOrderCreateDto) {
+        compositeContainer.execute(CompositeCheckType.PROGRAM_ORDER_CREATE_CHECK.getValue(),programOrderCreateDto);
+        List<SeatDto> seatDtoList = programOrderCreateDto.getSeatDtoList();
+        List<Long> ticketCategoryIdList = new ArrayList<>();
+        // 获取票档集合
+        if (CollectionUtil.isNotEmpty(seatDtoList)) {
+            ticketCategoryIdList =
+                    seatDtoList.stream().map(SeatDto::getTicketCategoryId).distinct().collect(Collectors.toList());
+        }else {
+            ticketCategoryIdList.add(programOrderCreateDto.getTicketCategoryId());
+        }
+        // 本地锁集合
+        List<ReentrantLock> localLockList = new ArrayList<>(ticketCategoryIdList.size());
+        // 分布式锁集合
+        List<RLock> serviceLockList = new ArrayList<>(ticketCategoryIdList.size());
+        // 获取成功的本地锁集合
+        List<ReentrantLock> localLockSuccessList = new ArrayList<>(ticketCategoryIdList.size());
+        // 获取成功的分布式锁集合
+        List<RLock> serviceLockSuccessList = new ArrayList<>(ticketCategoryIdList.size());
+        // 获取锁集合
+        for (Long ticketCategoryId : ticketCategoryIdList) {
+            String lockKey = StrUtil.join("-",PROGRAM_ORDER_CREATE_V2,
+                    programOrderCreateDto.getProgramId(),ticketCategoryId);
+            ReentrantLock localLock = localLockCache.getLock(lockKey,false);
+            RLock serviceLock = serviceLockTool.getLock(LockType.Reentrant, lockKey);
+            localLockList.add(localLock);
+            serviceLockList.add(serviceLock);
+        }
+        // 先逐个获取本地锁
+        for (ReentrantLock reentrantLock : localLockList) {
+            try {
+                reentrantLock.lock();
+            }catch (Throwable t) {
+                break;
+            }
+            localLockSuccessList.add(reentrantLock);
+        }
+        // 逐个获取分布式锁
+        for (RLock rLock : serviceLockList) {
+            try {
+                rLock.lock();
+            }catch (Throwable t) {
+                break;
+            }
+            serviceLockSuccessList.add(rLock);
+        }
+        try {
+            return programOrderService.create(programOrderCreateDto);
+        }finally {
+            // 释放分布式锁，倒序
+            for (int i = serviceLockSuccessList.size() - 1; i >= 0; i--) {
+                RLock rLock = serviceLockSuccessList.get(i);
+                try {
+                    rLock.unlock();
+                }catch (Throwable t) {
+                    log.error("service lock unlock error",t);
+                }
+            }
+            // 释放本地锁，倒序
+            for (int i = localLockSuccessList.size() - 1; i >= 0; i--) {
+                ReentrantLock reentrantLock = localLockSuccessList.get(i);
+                try {
+                    reentrantLock.unlock();
+                }catch (Throwable t) {
+                    log.error("local lock unlock error",t);
+                }
+            }
+        }
+    }
+```
+
+**注意：**
+
+- 本地锁是借助ReentrantLock实现的，因此可以选择公平和非公平方式，但是获取分布式锁的过程就无法保证公平性了，因为是网络传输。
+- 释放锁的逻辑应该和获取锁相反，最后获取的最先释放，这样才能保证不发生死锁
+
 
 
