--- a/My Project/大麦/大麦项目笔记——架构组件.md
+++ b/My Project/大麦/大麦项目笔记——架构组件.md
@@ -436,3 +436,302 @@ public class UserExistCheckHandler extends AbstractUserRegisterCheckHandler {
 
 ## 图形验证码
 
+
+
+## RedisStream封装
+
+### 序列化
+
+redisTemplate依赖于comment模块
+
+### 配置信息
+
+通过application.yaml文件即可指定配置信息
+
+```java
+@Data
+@ConfigurationProperties(prefix = RedisStreamConfigProperties.PREFIX)
+public class RedisStreamConfigProperties {
+    
+    // 配置前缀，用于读取yaml文件
+    public static final String PREFIX = "spring.data.redis.stream";
+    
+    /**
+     * stream名字
+     * */
+    private String streamName;
+    
+    /**
+     * 消费组名字
+     * */
+    private String consumerGroup;
+    
+    /**
+     * 消费者名
+     * */
+    private String consumerName;
+    
+    /**
+     * 消费方式 group:消费组(默认)/broadcast:广播
+     */
+    private String consumerType = RedisStreamConstant.GROUP;
+}
+```
+
+### 自动装配信息
+
+通过自动装配相关API，使得其他模块便于使用
+
+```java
+@Slf4j
+@EnableConfigurationProperties(RedisStreamConfigProperties.class)
+public class RedisStreamAutoConfig {
+    
+    /**
+     * 消息发送配置
+     * */
+    @Bean
+    public RedisStreamPushHandler redisStreamPushHandler(StringRedisTemplate stringRedisTemplate, 
+                                                         RedisStreamConfigProperties redisStreamConfigProperties) {
+        return new RedisStreamPushHandler(stringRedisTemplate, redisStreamConfigProperties);
+    }
+    
+    /**
+     * 消息操作配置
+     * */
+    @Bean
+    public RedisStreamHandler redisStreamHandler(RedisStreamPushHandler redisStreamPushHandler, 
+                                                 StringRedisTemplate stringRedisTemplate) {
+        return new RedisStreamHandler(redisStreamPushHandler, stringRedisTemplate);
+    }
+    
+    /**
+     * 主要做的是将OrderStreamListener监听绑定消费者，用于接收消息
+     *
+     * @param redisConnectionFactory redis连接工厂
+     * @return StreamMessageListenerContainer
+     */
+    @Bean
+    @ConditionalOnBean(MessageConsumer.class)
+    public StreamMessageListenerContainer<String, ObjectRecord<String, String>> streamMessageListenerContainer(
+            RedisConnectionFactory redisConnectionFactory, 
+            RedisStreamConfigProperties redisStreamConfigProperties, 
+            RedisStreamHandler redisStreamHandler, 
+            MessageConsumer messageConsumer) {
+        //消息侦听容器，创建后，StreamMessageListenerContainer可以订阅Redis流并使用传入的消息
+        StreamMessageListenerContainer.StreamMessageListenerContainerOptions<String, ObjectRecord<String, String>> 
+                options = StreamMessageListenerContainer.StreamMessageListenerContainerOptions.builder()
+                    //拉取消息超时时间
+                    .pollTimeout(Duration.ofSeconds(5))
+                    //批量抓取消息的数量
+                    .batchSize(10)
+                    //传递的数据类型
+                    .targetType(String.class)
+                    //获取消息的过程或获取到消息给具体的消息者处理的过程中，发生了异常的处理
+                    .errorHandler(t -> log.error("出现异常", t))
+                    //执行拉取任务的执行线程池
+                    .executor(createThreadPool()).build();
+        StreamMessageListenerContainer<String, ObjectRecord<String, String>> container = 
+                StreamMessageListenerContainer.create(redisConnectionFactory, options);
+        //检查消费类型，消费组或者广播
+        checkConsumerType(redisStreamConfigProperties.getConsumerType());
+        //监听器
+        RedisStreamListener redisStreamListener = new RedisStreamListener(messageConsumer);
+        //如果是分组消费
+        if (RedisStreamConstant.GROUP.equals(redisStreamConfigProperties.getConsumerType())) {
+            //绑定stream和消费组
+            redisStreamHandler.streamBindingGroup(redisStreamConfigProperties.getStreamName(), 
+                    redisStreamConfigProperties.getConsumerGroup());
+            //这里用的是ack自动提交
+            container.receiveAutoAck(Consumer.from(redisStreamConfigProperties.getConsumerGroup(), 
+                    redisStreamConfigProperties.getConsumerName()), 
+                    StreamOffset.create(redisStreamConfigProperties.getStreamName(), ReadOffset.lastConsumed()), 
+                    redisStreamListener);
+        } else {
+            //如果是广播消费
+            container.receive(StreamOffset.fromStart(redisStreamConfigProperties.getStreamName()), redisStreamListener);
+        }
+        //启动监听
+        container.start();
+        return container;
+    }
+    
+    public ThreadPoolExecutor createThreadPool(){
+        //线程池
+        int coreThreadCount = Runtime.getRuntime().availableProcessors();
+        AtomicInteger threadCount = new AtomicInteger(1);
+        return new ThreadPoolExecutor(
+                coreThreadCount,
+                2 * coreThreadCount,
+                30,
+                TimeUnit.SECONDS,
+                new ArrayBlockingQueue<>(100),
+                r -> {
+                    Thread thread = new Thread(r);
+                    thread.setName("thread-consumer-stream-task-" + threadCount.getAndIncrement());
+                    return thread;
+                });
+    }
+    
+    public void checkConsumerType(String consumerType){
+        if ((!RedisStreamConstant.GROUP.equals(consumerType)) && (!RedisStreamConstant.BROADCAST.equals(consumerType))) {
+            throw new DaMaiFrameException(BaseCode.REDIS_STREAM_CONSUMER_TYPE_NOT_EXIST);
+        }
+    }
+}
+```
+
+### 使用
+
+使用上非常方便，只需要引入Stream模块的依赖
+
+发送消息：调用`redisStreamPushHandler.push()`接口
+
+```java
+public void test(ProgramGetDto programGetDto) {
+    redisStreamPushHandler.push(JSON.toJSONString(programGetDto));
+}
+```
+
+监听消息：实现MessageConsumer接口，重写accept()方法执行业务逻辑
+
+```java
+@Slf4j
+@Component
+public class TestRedisStreamConsumer implements MessageConsumer {
+    @Override
+    public void accept(final ObjectRecord<String, String> message) {
+        String value = message.getValue();
+        log.info("====处理消息 : {}=====",value);
+    }
+}
+```
+
+## 幂等组件
+
+### 定义
+
+指的是一个操作多次应用之后的结果还是保持不变，在Web项目中，可能因为网络不稳定等原因导致消息被重复发送，因此需要幂等来保持业务的正确性，也就是一个请求发送一次和多次都会产生相同的结果
+
+### 幂等常见技术和方法
+
+1. 唯一标识：服务端处理请求的时候可以判断这个标识的请求是不是被处理过了，如果处理过了，则不再处理
+2. 数据库唯一约束：比如主键或者是唯一的字段，如果尝试插入相同的数据，那么会报错
+3. 乐观锁：通过版本号或者时间戳来判断本次修改是不是合法的
+4. 分布式锁：保证同一时间内只有一个节点进行处理，防止出现多个节点处理相同的请求
+
+### 实现
+
+不仅要考虑可靠性，还要保证性能，因此我们通过封装Redisson来实现。
+
+为什么不直接使用分布式锁呢？
+
+我们的业务是保证同一个用户进行下单的时候的幂等性，而**分布式锁**更多的是在**不同用户进行下单的时候保证只有一个用户执行**，同时其他用户一次等待获取锁并执行业务，最终是要**全部执行完的**。而**幂等性**的特点是保证只有当前用户执行**第一次操作的时候能够正确执行**，而**后续的操作**应该直接**结束掉**。
+
+幂等实现之后的业务流程：
+
+<img src="images/1723692519364-f8d1eb6f-aeb7-405d-95bf-692f961a0ddb.png" alt="img" style="zoom: 33%;" />
+
+```java
+@Slf4j
+@Aspect
+@Order(-11)
+@AllArgsConstructor
+public class RepeatExecuteLimitAspect {
+
+    private final LocalLockCache localLockCache;
+
+    private final LockInfoHandleFactory lockInfoHandleFactory;
+
+    private final ServiceLockFactory serviceLockFactory;
+
+    private final RedissonDataHandle redissonDataHandle;
+
+
+    @Around("@annotation(repeatLimit)")
+    public Object around(ProceedingJoinPoint joinPoint, RepeatExecuteLimit repeatLimit) throws Throwable {
+        //指定保持幂等的时间
+        long durationTime = repeatLimit.durationTime();
+        //提示信息
+        String message = repeatLimit.message();
+        Object obj;
+        //获取锁信息
+        LockInfoHandle lockInfoHandle = lockInfoHandleFactory.
+                getLockInfoHandle(LockInfoType.REPEAT_EXECUTE_LIMIT);
+        //解析锁名字
+        String lockName = lockInfoHandle.getLockName(joinPoint, repeatLimit.name(), repeatLimit.keys());
+        //幂等标识
+        String repeatFlagName = PREFIX_NAME + lockName;
+        //获得幂等标识
+        String flagObject = redissonDataHandle.get(repeatFlagName);
+        //如果幂等标识的值为success，说明已经有请求在执行了，这次请求直接结束
+        if (SUCCESS_FLAG.equals(flagObject)) {
+            throw new DaMaiFrameException(message);
+        }
+        //获取本地锁
+        ReentrantLock localLock = localLockCache.getLock(lockName, false);
+        //本地锁获取锁
+        boolean localLockResult = localLock.tryLock();
+        //如果上锁失败，说明已经有请求在执行了，这次请求直接结束
+        if (!localLockResult) {
+            throw new DaMaiFrameException(message);
+        }
+        try {
+            //获取分布式锁
+            ServiceLocker lock = serviceLockFactory.getLock(LockType.Reentrant);
+            //分布式锁获取锁
+            boolean result = lock.tryLock(lockName, TimeUnit.SECONDS, 0);
+            //加锁成功执行
+            if (result) {
+                try {
+                    //再次获取幂等标识
+                    flagObject = redissonDataHandle.get(repeatFlagName);
+                    //如果幂等标识的值为success，说明已经有请求在执行了，这次请求直接结束
+                    if (SUCCESS_FLAG.equals(flagObject)) {
+                        throw new DaMaiFrameException(message);
+                    }
+                    //执行业务逻辑
+                    obj = joinPoint.proceed();
+                    if (durationTime > 0) {
+                        try {
+                            //业务逻辑执行成功 并且 指定了设置幂等保持时间 设置请求标识
+                            redissonDataHandle.set(repeatFlagName,
+                                    SUCCESS_FLAG,
+                                    durationTime,
+                                    TimeUnit.SECONDS);
+                        } catch (Exception e) {
+                            log.error("getBucket error", e);
+                        }
+                    }
+                    return obj;
+                } finally {
+                    lock.unlock(lockName);
+                }
+            } else {
+                //获取锁失败，说明已经有请求在执行了，这次请求直接结束
+                throw new DaMaiFrameException(message);
+            }
+        } finally {
+            localLock.unlock();
+        }
+    }
+}
+```
+
+重点是切面的使用：
+
+1. 填入参数，比如锁信息、提示信息等
+2. 获取幂等信息，如果幂等信息存在了，那就直接返回错误。
+3. 获取本地锁
+4. 获取分布式锁
+5. 再次尝试获取幂等标识
+6. 执行业务逻辑
+7. 设置幂等标识和保持时间
+
+**说明：**如果是对于防止同一个用户同时点击的场景，则使用本地锁+分布式锁足以解决，但是项目中除了要实现用户业务幂等，还要实现消息幂等，消息幂等的话，可能是隔一段时间后才会再次发送或者消费，因此需要幂等标识来让后续业务知道消息是不是已经消费了
+
+### 使用
+
+组件已经自动装配，可以在Spring中自动获取，需要用到的时候进行注解配置即可
+
+![image-20250114174551634](images/大麦项目笔记——架构组件/image-20250114174551634.png)
